[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/reversequest/edit_choice/edit_choice.gd" type="Script" id=1]

[node name="EditChoice" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Choice" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Choice"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.890196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Choice"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Choice/MarginContainer"]
margin_right = 1004.0
margin_bottom = 580.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Choice/MarginContainer/HBoxContainer"]
margin_right = 500.0
margin_bottom = 580.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextLabel" type="Label" parent="Choice/MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 500.0
margin_bottom = 14.0
text = "Текст выбора"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="Choice/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 500.0
margin_bottom = 580.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Choice/MarginContainer/HBoxContainer"]
margin_left = 504.0
margin_right = 1004.0
margin_bottom = 580.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Choice/MarginContainer/HBoxContainer/HBoxContainer"]
margin_right = 500.0
margin_bottom = 580.0
size_flags_horizontal = 3

[node name="Link" type="Control" parent="Choice/MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 500.0

[node name="Control" type="Control" parent="Choice/MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 500.0
margin_bottom = 580.0
size_flags_vertical = 3

[node name="VBoxContainer" type="HBoxContainer" parent="Choice/MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer/Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -25.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" type="Button" parent="Choice/MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer/Control/VBoxContainer"]
margin_left = 472.0
margin_right = 484.0
margin_bottom = 25.0
text = "Отмена"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Apply" type="Button" parent="Choice/MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer/Control/VBoxContainer"]
margin_left = 488.0
margin_right = 500.0
margin_bottom = 25.0
text = "Применить"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="text_changed" from="Choice/MarginContainer/HBoxContainer/VBoxContainer/TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="pressed" from="Choice/MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer/Control/VBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="Choice/MarginContainer/HBoxContainer/HBoxContainer/VBoxContainer/Control/VBoxContainer/Apply" to="." method="_on_Apply_pressed"]
